# TKAN

./: .gitignore  README.md  pyproject.toml  run_tests.py
.github/workflows/: tkan_ci.yml
examples/: simple_example.ipynb  simple_example_tkan.ipynb
examples/utils/: minmaxscaler.py
tests/: test_jax.py  test_tensorflow.py  test_torch.py
tkan/: __init__.py  kan.py  spline.py  tkan.py
